--- a/cryptonight/cryptonight.vcxproj.filters
+++ b/cryptonight/cryptonight.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="cryptonight\groestl.c">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="cryptonight\CryptonightR_JIT.c">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="compile.sh" />
@@ -105,6 +108,15 @@
       <Filter>File di origine</Filter>
     </ClInclude>
     <ClInclude Include="cryptonight\groestl_tables.h">
+      <Filter>File di origine</Filter>
+    </ClInclude>
+    <ClInclude Include="cryptonight\variant4_random_math.h">
+      <Filter>File di origine</Filter>
+    </ClInclude>
+    <ClInclude Include="cryptonight\CryptonightR_template.h">
+      <Filter>File di origine</Filter>
+    </ClInclude>
+    <ClInclude Include="cryptonight\CryptonightR_JIT.h">
       <Filter>File di origine</Filter>
     </ClInclude>
   </ItemGroup>
